styles.css
body {
  background-image: url(assets/background.jpg);
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  background-color: #b4b4b4;
  background-blend-mode: multiply;
}

img {
  user-select: none;
}

label,
select,
option,
input {
  font-family: "Vast Shadow", serif;
  font-weight: 400;
  font-style: normal;
  font-size: 1vw;
  user-select: none;
}

.card-container {
  position: fixed;
  inset: 0;
  height: 100vh;
  width: 50%;
  overflow-x: hidden;
  overflow-y: auto;
}

.card {
  width: calc((50% - 5 * 0.25vw) / 2.5);
  margin: 0.5vh 0.25vw;
}

.leader-card {
  height: calc((45% - 1vh) / 0.5);
  padding-left: 20%;
  margin: 2vh 2vw;
}

.deck-card {
  width: calc((50% - 11 * 0.15vw) / 5.5);
  margin: 0.2vh 0.15vw;
}

.evolve-card {
  width: calc((50% - 7 * 0.15vw) / 3.5);
  margin: 0.2vh 0.15vw;
}

.card-preview-left,
.card-preview-right {
  position: absolute;
  z-index: 3;
}

.card-preview-right {
  right: 7vw;
}

.card-preview-left {
  left: 7vw;
}

.preview {
  height: 99vh;
}

.info-container {
  padding-left: 50vw;
}

.deck-container {
  border: 1mm solid black;
  height: 75vh;
  width: 48vw;
  overflow-y: auto;
}

.deck-filter {
  background-color: white;
  border: 1mm solid black;
  position: absolute;
  z-index: 1;
  width: 26vw;
  height: 3%;
  right: calc(25% - 13vw);
  top: 71%;
  padding: 1mm;
}

.card-count {
  background-color: white;
  padding: 1mm;
  border: 1mm solid black;
  position: absolute;
  z-index: 1;
  left: calc(89%);
  top: 71.5%;
}

.card-filters {
  background-color: white;
  border: 1mm solid black;
  height: 20vh;
  width: 48vw;
}

